--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 .DS_Store
+.idea/.idea.AyseKaratas_KumkuatDemo/.idea/projectSettingsUpdater.xml
+.idea/.idea.AyseKaratas_KumkuatDemo/.idea/workspace.xml
